--- a/part4/blog/package.json
+++ b/part4/blog/package.json
@@ -1,21 +1,28 @@
 {
   "name": "blog",
   "version": "1.0.0",
-  "description": "",
+  "description": "\"\"",
   "main": "index.js",
   "scripts": {
     "start": "index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose"
   },
   "author": "Xerach",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^7.27.0",
+    "jest": "^27.0.1",
     "nodemon": "^2.0.7"
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "lodash": "^4.17.21",
     "mongoose": "^5.12.11"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
