--- a/pruebas/part4/backend/package.json
+++ b/pruebas/part4/backend/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "rm -rf build && cd ../../part2 && npm run build --prod && cp -r build ../part3/backend/ ",
     "deploy": "git push heroku master",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
     "logs:prod": "heroku logs --tail",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "jest --verbose"
   },
   "author": "Xerach",
   "license": "ISC",
@@ -24,6 +24,10 @@
   },
   "devDependencies": {
     "eslint": "^7.27.0",
+    "jest": "^27.0.1",
     "nodemon": "^2.0.7"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
