--- a/part4/blog/package.json
+++ b/part4/blog/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "start:test": "cross-env NODE_ENV=test node index.js",
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand"
+    
   },
   "author": "Xerach",
   "license": "ISC",
@@ -32,3 +34,4 @@
     "testEnvironment": "node"
   }
 }
+
